@@ -202,6 +202,14 @@ SOURCE=..\..\src\data_log.c
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\log_dbus.c
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\log_dusb.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\log_hex.c
 # End Source File
 # End Group
