@@ -3,7 +3,7 @@ dnl $Id$
 
 # Init.
 AC_PREREQ(2.57)
-AC_INIT(libticables2, 0.0.7, [tilp-users@lists.sourceforge.net])
+AC_INIT(libticables2, 0.0.8, [tilp-users@lists.sourceforge.net])
 
 dnl Release versioning info
 VERSION="0.0.7"
@@ -17,7 +17,7 @@ dnl    reset 'revision' and increment 'age'.
 dnl  * If you changed/removed things from the api, increment 'current',
 dnl    reset 'revision' and reset 'age'.
 LT_CURRENT=0
-LT_REVISION=7
+LT_REVISION=8
 LT_AGE=0
 LT_LIBVERSION="$LT_CURRENT:$LT_REVISION:$LT_AGE"
 AC_SUBST(LT_LIBVERSION, $LT_CURRENT:$LT_REVISION:$LT_AGE)
