@@ -20,7 +20,7 @@
  */
 
 /* 
-	Hexadecimal logging.
+	D-USB logging.
 */
 
 #ifdef HAVE_CONFIG_H
@@ -32,14 +32,13 @@
 
 #include "logging.h"
 #include "data_log.h"
-#include "ticables.h"
 
-#define LOG_FILE  "ticables-hex.log"
+#define LOG_FILE  "ticables-dusb.log"
 
 static char *fn = NULL;
 static FILE *log = NULL;
 
-int log_hex_start(void)
+int log_dusb_start(void)
 {
   // build filenames
 #ifdef __WIN32__
@@ -55,45 +54,15 @@ int log_hex_start(void)
     		return -1;
   	}
 
-	fprintf(log, "TiCables-2 data logger\n");	// needed by log_dbus.c
-	fprintf(log, "Version %s\n", ticables_version_get());
-	fprintf(log, "\n");
-
   	return 0;
 }
 
-int log_hex_1(int dir, uint8_t data)
+int log_dusb_1(int dir, uint8_t data)
 {
-  	static int array[20];
-  	static int i = 0;
-  	int j;
-  	int c;
-
-  	if (log == NULL)
-    		return -1;
-  	
-	array[i++] = data;
-  	fprintf(log, "%02X ", data);
-
-  	if ((i > 1 ) && !(i % 16)) 
-	{
-    	fprintf(log, "| ");
-    	for (j = 0; j < 16; j++) 
-		{
-      		c = array[j];
-      		if ((c < 32) || (c > 127))
-				fprintf(log, " ");
-      		else
-				fprintf(log, "%c", c);
-    	}
-    	fprintf(log, "\n");
-    	i = 0;
-  	}
-
   	return 0;
 }
 
-int log_hex_stop(void)
+int log_dusb_stop(void)
 {
   	if (log != NULL)
 	{
